# home-credit

./: .gitignore  README.md  app_predict.py  app_train.py  pyproject.toml  requirements.txt
docs/: conf.py  contributors.rst  getting-started.rst  index.rst  installation.rst  project_presentation.rst
docs/files/: app_train.rst
docs/html/: .buildinfo  commands.html  contributors.html  genindex.html  getting-started.html  index.html  installation.html  objects.inv  project_presentation.html  search.html  searchindex.js
home-credit/: .gitignore  Makefile  app_predict.py  app_train.py  pyproject.toml  requirements.txt  setup.py
home-credit/docs/: Makefile  commands.rst  make.bat
home-credit/models/: 1_gradient_boosting.pkl
home-credit/notebooks/: 1.0-cbw-data-preprocessing.ipynb  1.0_cbw_data_preprocessing.ipynb  1.0_cbw_data_preprocessing.py  1_0_cbw_data_preprocessing.ipynb
notebooks/: 1.0-cbw-data-preprocessing.ipynb  3.0-cbw-xgboost-xai.ipynb
notebooks/app/: 3.0-cbw-app-train.ipynb  4.0-cbw-app-predict.ipynb  4.0-cbw-app-train.ipynb  5.0-cbw-app-predict.ipynb  5.0-cbw-xgboost-xai.ipynb  6.0-cbw-xgboost-xai.ipynb
notebooks/data/: 1.0-cbw-data-retrieval.ipynb
notebooks/train/: 2.0-cbw-gradient-boosting-train.ipynb  2.0-cbw-random-forest-train.ipynb  2.0-cbw-xgboost-train.ipynb  2_0_cbw_xgboost_train.ipynb  3.0-cbw-gradient-boosting-train.ipynb  3.0-cbw-random-forest-train.ipynb  3.0-cbw-xgboost-train.ipynb
src/features/: build_features.py
src/models/: predict_model.py  retrieve_fit_model.py
src/visualization/: xgboost_xai.py
(+131 files in other folders)
