[tool.poetry]
name = "home-credit"
version = "0.1.0"
description = "applications of big data project"
authors = ["cbw"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
mlflow = "^1.21.0"
urllib3 = "^1.26.7"
requests = "^2.26.0"
xgboost = "^1.5.0"
numpy = "1.20.0"
numba = "^0.54.1"
matplotlib = "^3.5.0"
ipython = "^7.29.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
